# cijene-api

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  LICENSE  README.md  README_TIMESCALE.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup-cron.sh
.claude/: settings.json
.github/workflows/: ci.yml
crawler/: __init__.py  crawl.py
crawler/cli/: crawl.py
crawler/store/: __init__.py  archive-info.txt  base.py  boso.py  brodokomerc.py  dm.py  eurospin.py  kaufland.py  konzum.py  ktc.py  lidl.py  lorenco.py  metro.py  models.py  ntl.py  output.py  plodine.py  ribola.py  roto.py  spar.py  studenac.py  tommy.py  trgocentar.py  trgovina_krk.py  utils.py  vrutak.py  zabac.py
docs/: crawler.md
enrichment/: products.csv  stores.csv
service/: __init__.py  config.py  import.py  main.py
service/db/: base.py  continuous_aggregates.sql  enrich.py  import.py  migrate_to_timescale.sql  models.py  policies.sql  psql.py  psql.sql  stats.py  timescale_init.sql
service/db/importer/: __init__.py  archive_handler.py  chain_importer.py  csv_reader.py  processors.py
service/routers/: __init__.py  analytics.py  auth.py  v0.py  v1.py
